--- a/testes.ipynb
+++ b/testes.ipynb
@@ -240,6 +240,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\Gizel\\AppData\\Local\\Temp\\ipykernel_11952\\2654279559.py:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  codigo_hexadecimal = b\"\\c3a9\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\c3a9'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xc3\\xa1\\xc3\\xa9\\xc3\\xad\\xc3\\xb3\\xc3\\xba'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car = \"áéíóú\"\n",
+    "car_encode = car.encode(\"utf-8\")\n",
+    "car_encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'áéíóú'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car = b'\\xc3\\xa1\\xc3\\xa9\\xc3\\xad\\xc3\\xb3\\xc3\\xba'\n",
+    "car_decode = car.decode(\"utf-8\")\n",
+    "car_decode"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
