first-author-tests

--- a/testes.ipynb
+++ b/testes.ipynb
@@ -382,6 +382,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estudando bastante\n"
+     ]
+    }
+   ],
+   "source": [
+    "bruno = \"estudando bastante\"\n",
+    "\n",
+    "if \"estud\" in bruno:\n",
+    "    print(bruno)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "#isso dá erro\n",
+    "\n",
+    "bruno = 123\n",
+    "\n",
+    "if 12 in bruno:\n",
+    "    print(bruno)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "frase = \"aA1\"\n",
+    "\n",
+    "regex = re.compile(r\"(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])\")\n",
+    "\n",
+    "regex.findall(frase)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
