depois de passar para o novo pc

--- a/testes.ipynb
+++ b/testes.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "import sqlite3 as sql\n",
-    "caminho_banco = r\"C:\\Users\\Gizel\\OneDrive\\Área de Trabalho\\PythonCasa\\DjangoLib\\db.sqlite3\"\n",
+    "caminho_banco = r\"C:\\Users\\Feier\\OneDrive\\Área de Trabalho\\PythonCasa\\DjangoLib\\db.sqlite3\"\n",
     "banco = sql.connect(caminho_banco)\n",
     "consulta = banco.cursor()\n",
     "#query = \"DELETE FROM recipes_recipe WHERE title = ''\"\n",
@@ -249,7 +249,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
-      "C:\\Users\\Gizel\\AppData\\Local\\Temp\\ipykernel_11952\\2654279559.py:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\Feier\\AppData\\Local\\Temp\\ipykernel_11952\\2654279559.py:2: SyntaxWarning: invalid escape sequence '\\c'\n",
       "  codigo_hexadecimal = b\"\\c3a9\"\n"
      ]
     },
